# rccg

./: .env  .gitignore  Cargo.toml  Info.plist  README.md  entitlements.plist  quick_server.py  serve.py  serve.spec  simple_web_server.py  tauri.conf.json  test_mic.py  write_server.py  write_ui.py  write_ui2.py
.github/workflows/: build.yml
icons/: icon.icns
src/: bible.rs  detector.rs  main.rs  server.rs  simple.rs
static/: index.html
web-ui/: index-web.html  index.html
