[package]
name = "rccg-com-bible-lite"
version = "1.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "window-all"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "rccg-com-bible-lite"
path = "src/main.rs"
